[project]
name = "SpotMicro"
version = "1.0.0"
description = "Robot Quadrupedo"
authors = [
    {name = "albortas",email = "garlad628@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "contourpy (>=1.3.2,<2.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "fonttools (>=4.58.4,<5.0.0)",
    "gym (>=0.26.2,<0.27.0)",
    "gym-notices (>=0.0.8,<0.0.9)",
    "importlib-metadata (>=8.7.0,<9.0.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "packaging (>=25.0,<26.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pybullet (>=3.2.7,<4.0.0)",
    "pyparsing (>=3.2.3,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "zipp (>=3.23.0,<4.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    ]
[tool.poetry]
packages = [
    {include = "spotmicro"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
